bugfixes for blurry text in circle badges in marketing components

--- a/src/components/easycredit-box-top/easycredit-box-top.scss
+++ b/src/components/easycredit-box-top/easycredit-box-top.scss
@@ -45,8 +45,8 @@
         margin-right: 20px;
 
         @extend .logo-ratenkauf-white;
-        height: 24px;
-        width: 51px;
+        height: 30px;
+        width: 63px;
     }
     &__content-text {
         text-align: center;
