--- a/src/globals/base.scss
+++ b/src/globals/base.scss
@@ -444,14 +444,19 @@ $circle-secondary: '<svg width="330" height="331" viewBox="0 0 330 331" fill="no
   width: 100px;
   height: 100px;
   box-sizing: border-box;
-  transform: rotate(10deg);
+  // transform: rotate(10deg);
 
   background-color: $ec-secondary;
+  background-image: url(#{$ec-base-url}/easycredit-components/assets/circle-badge-text.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
   border-radius: 100%;
 
   text-align: center;
   font-size: 11px;
-  color: $white;
+  color: rgba(255,255,255,0) !important;
+  // color: $white;
 
   span {
       font-size: $font-size-heading-lg;
@@ -478,8 +483,8 @@ $circle-secondary: '<svg width="330" height="331" viewBox="0 0 330 331" fill="no
   }
 
   &.ec__circle-badge-xs {
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
     font-size: $font-size-xxxs;
 
     span {
